--- a/Assets/Style/style.css
+++ b/Assets/Style/style.css
@@ -58,62 +58,21 @@ h2{
     flex-direction: row;
 }
 
-.day-1{
-    display: flex;
+#recentList{
+    display:flex;
     flex-direction: column;
-    background-color: rgb(58, 58, 68);
-    color:white;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 70px;
-    font-size: 18px;
+}
 
-}
-.day-2{
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(58, 58, 68);
-    color:white;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 70px;
-    font-size: 18px;
-}
-.day-3{
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(58, 58, 68);
-    color:white;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 70px;
-    font-size: 18px;
 
-}
-.day-4{
+.day{
     display: flex;
     flex-direction: column;
     background-color: rgb(58, 58, 68);
     color:white;
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 70px;
-    font-size: 18px;
-
-}
-.day-5{
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(58, 58, 68);
-    color:white;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 70px;
+    padding-left: 6px;
+    padding-right: 10px;
     font-size: 18px;
 
 }
