--- a/Assets/Style/style.css
+++ b/Assets/Style/style.css
@@ -6,9 +6,19 @@ h2{
     padding-bottom: 10px;
 }
 #search-btn{
-    
     width:210px;
+    text-align: center;
    
+}
+button{
+    border: 0px;
+    border-radius: 5px;
+    color:white;
+    background-color: rgb(13, 110, 253);
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding-top: 6px;
+    padding-bottom: 6px;
 }
 
 .main{
